text flicker on revert fix

--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -91,7 +91,7 @@ $font-weight-bold: 700;
 
   margin-bottom: $spacing/3;
   font-family: 'DM Sans', sans-serif;
-  color: $gray500;
+  color: $gray600;
   font-weight: $font-weight-bold;
   letter-spacing: 0.0625em;
 
@@ -99,7 +99,7 @@ $font-weight-bold: 700;
   {
     @include type-setting(-1);
 
-    color: $gray400;
+    color: $gray500;
   }
 }
 
